libs/topology/src/test/resources/sample-deployment-with-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-service
  namespace: default
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: myapp:1.0
          env:
            - name: API_KEY
              valueFrom:
                secretKeyRef:
                  name: api-secrets
                  key: api-key
            - name: LOG_LEVEL
              value: "DEBUG"
