libs/topology/src/test/resources/sample-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: booking-vs
spec:
  hosts:
    - booking-service
  http:
    - route:
        - destination:
            host: booking-service
            port:
              number: 8080
          weight: 100
